--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,34 @@ main {
   left: 0;
 }
 
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 5px;
+  -webkit-transition: .3s ease-in;
+  transition: .3s ease-in;
+  letter-spacing: 1px;
+}
+
+.btn.btn-primary {
+  background-color: #64ffda;
+  color: #0a192f;
+  border: 2px solid #64ffda;
+}
+
+.btn.btn-primary:hover {
+  background-color: #00fdc1;
+}
+
+.btn.btn-primary.btn-outline {
+  background-color: transparent;
+  color: #64ffda;
+}
+
+.btn.btn-primary.btn-outline:hover {
+  background-color: #1a2e4b;
+}
+
 .random {
   height: 1600px;
   width: 100%;
