--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import './styles/color';
+@import './styles/variables';
 @import './styles/fonts';
 
 
@@ -44,6 +44,34 @@ main {
     }
 }
 
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: .3s ease-in;
+    letter-spacing: 1px;
+
+    &.btn-primary {
+        background-color: $cyan;
+        color: $navy;
+        border: 2px solid $cyan;
+
+        &:hover {
+            background-color: darken($color: $cyan, $amount: 20%);
+        }
+
+        &.btn-outline {
+            background-color: transparent;
+            color: $cyan;
+
+            &:hover {
+                background-color: $light-navy-2;
+            }
+        }
+    }
+
+
+}
 
 .random {
     height: 1600px;
