--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -13,29 +13,31 @@
 }
 
 .hero-container {
-  width: 90%;
+  width: 95%;
 }
 
 .hero-container .hero-greeting {
-  color: #64ffda;
-  font-family: "SF Mono";
+  color: var(--primary-2);
+  font-family: var(--sf-mono);
 }
 
 .hero-container .hero-name {
-  color: #e6f1ff;
-  font-family: "SF Pro Bold";
+  color: var(--f-primary-1);
+  font-family: var(--sf-pro-bold);
   margin-top: 20px;
   font-size: 2.2em;
 }
 
 .hero-container .hero-subname {
-  color: #8892b0;
-  font-family: "SF Pro Bold";
+  color: var(--f-primary-2);
+  font-family: var(--sf-pro-bold);
   margin-top: 5px;
+  font-size: 1.4em;
 }
 
 .hero-container .hero-summary {
-  color: #8892b0;
+  font-family: var(--sf-pro-regular);
+  color: var(--f-primary-2);
   margin-top: 20px;
   margin-bottom: 20px;
   line-height: 1.5;
@@ -44,5 +46,115 @@
 
 .hero-container .btn {
   margin-top: 20px;
+}
+
+.hero-left {
+  position: absolute;
+  left: 20px;
+  bottom: 0;
+}
+
+.hero-left .hero-contact {
+  list-style: none;
+}
+
+.hero-left .hero-contact li a {
+  display: inline-block;
+  padding: 20px;
+}
+
+.hero-left .hero-contact li a i {
+  color: var(--f-primary-2);
+  font-size: 1.5em;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+.hero-left .hero-contact li a:hover i {
+  color: var(--primary-2);
+}
+
+.hero-left .hero-contact::after {
+  content: '';
+  display: block;
+  width: 1px;
+  height: 100px;
+  margin: 0 auto;
+  background-color: var(--f-primary-2);
+}
+
+.hero-right {
+  position: absolute;
+  right: 20px;
+  bottom: 0;
+}
+
+.hero-right a {
+  color: var(--f-primary-2);
+  font-family: var(--sf-mono);
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  letter-spacing: 3px;
+  line-height: 1;
+  font-size: .8em;
+  padding: 20px;
+}
+
+.hero-right::after {
+  content: '';
+  display: block;
+  width: 1px;
+  height: 100px;
+  margin: 0 auto;
+  background-color: var(--f-primary-2);
+}
+
+@media screen and (min-width: 480px) {
+  .hero-container {
+    width: 85%;
+  }
+  .hero-container .hero-subname {
+    font-size: 1.6em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-container {
+    width: 75%;
+  }
+  .hero-container .hero-summary {
+    font-size: 1.2em;
+    max-width: 600px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .hero-container {
+    width: 60%;
+  }
+  .hero-container .hero-greeting {
+    font-size: 1.4em;
+  }
+  .hero-container .hero-name {
+    font-size: 3.5em;
+  }
+  .hero-container .hero-subname {
+    font-size: 2.7em;
+  }
+  .hero-container .hero-summary {
+    font-size: 1.2em;
+    max-width: 600px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-container {
+    width: 50%;
+  }
+  .hero-container .hero-summary {
+    font-size: 1.2em;
+    max-width: 600px;
+  }
 }
 /*# sourceMappingURL=Hero.css.map */
