--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,8 +1,17 @@
-@import '../../styles/variables';
-
 @mixin hero-title($color) {
     color: $color;
-    font-family: $sf-pro-bold;
+    font-family: var(--sf-pro-bold);
+}
+
+@mixin hero-vertical-line {
+    &::after {
+        content: '';
+        display: block;
+        width: 1px;
+        height: 100px;
+        margin: 0 auto;
+        background-color: var(--f-primary-2);
+    }
 }
 
 .hero {
@@ -14,26 +23,28 @@
 }
 
 .hero-container {
-    width: 90%;
+    width: 95%;
 
     .hero-greeting {
-        color: $cyan;
-        font-family: $sf-mono;
+        color: var(--primary-2);
+        font-family: var(--sf-mono);
     }
 
     .hero-name {
-        @include hero-title($white);
+        @include hero-title(var(--f-primary-1));
         margin-top: 20px;
         font-size: 2.2em;
     }
 
     .hero-subname {
-        @include hero-title($slate);
+        @include hero-title(var(--f-primary-2));
         margin-top: 5px;
+        font-size: 1.4em;
     }
 
     .hero-summary {
-        color: $slate;
+        font-family: var(--sf-pro-regular);
+        color: var(--f-primary-2);
         margin-top: 20px;
         margin-bottom: 20px;
         line-height: 1.5;
@@ -42,5 +53,105 @@
 
     .btn {
         margin-top: 20px;
+    }
+}
+
+.hero-left {
+    position: absolute;
+    left: 20px;
+    bottom: 0;
+
+    .hero-contact {
+        list-style: none;
+
+        li a {
+            display: inline-block;
+            padding: 20px;
+
+            i {
+                color: var(--f-primary-2);
+                font-size: 1.5em;
+                transition: .3s ease;
+            }
+
+            &:hover i {
+                color: var(--primary-2);
+            }
+        }
+
+        @include hero-vertical-line();
+    }
+}
+
+.hero-right {
+    position: absolute;
+    right: 20px;
+    bottom: 0;
+
+    a {
+        color: var(--f-primary-2);
+        font-family: var(--sf-mono);
+        writing-mode: vertical-rl;
+        letter-spacing: 3px;
+        line-height: 1;
+        font-size: .8em;
+        padding: 20px;
+
+    }
+    @include hero-vertical-line();
+}
+
+@media screen and (min-width: 480px) {
+    .hero-container {
+        width: 85%;
+
+        .hero-subname {
+            font-size: 1.6em;
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .hero-container {
+        width: 75%;
+
+        .hero-summary {
+            font-size: 1.2em;
+            max-width: 600px;
+        }
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .hero-container {
+        width: 60%;
+
+        .hero-greeting {
+            font-size: 1.4em;
+        }
+
+        .hero-name {
+            font-size: 3.5em;
+        }
+
+        .hero-subname {
+            font-size: 2.7em;
+        }
+
+        .hero-summary {
+            font-size: 1.2em;
+            max-width: 600px;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .hero-container {
+        width: 50%;
+
+        .hero-summary {
+            font-size: 1.2em;
+            max-width: 600px;
+        }
     }
 }
