--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,5 @@
 .navbar {
-  background: rgba(10, 25, 47, 0.9);
-  -webkit-box-shadow: 0 10px 30px -10px rgba(2, 12, 27, 0.7);
-          box-shadow: 0 10px 30px -10px rgba(2, 12, 27, 0.7);
+  background: var(--bg-primary-1-transparent);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -18,13 +16,18 @@
   z-index: 2;
 }
 
+.navbar.box-shadow {
+  -webkit-box-shadow: 0 10px 30px -10px var(--bg-primary-1-shadow);
+          box-shadow: 0 10px 30px -10px var(--bg-primary-1-shadow);
+}
+
 .navbar .nav-link {
   display: inline-block;
 }
 
 .navbar .nav-logo {
   max-height: 60px;
-  padding: 15px 25px;
+  padding: 10px 25px;
 }
 
 .navbar .menu-icon button {
@@ -33,7 +36,7 @@
   border: none;
   height: 60px;
   font-size: 1.7em;
-  color: #64ffda;
+  color: var(--primary-2);
   padding: 10px 20px;
   width: 60px;
   z-index: 99;
@@ -55,11 +58,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #e6f1ff;
+  color: white;
   position: relative;
   -webkit-transition: .3s ease;
   transition: .3s ease;
-  font-family: 'SF Mono';
+  font-family: var(--sf-mono);
   font-size: .9em;
 }
 
@@ -72,7 +75,7 @@
           transform: translateX(-50%);
   bottom: 0px;
   height: 2px;
-  background-color: #64ffda;
+  background-color: var(--primary-2);
   -webkit-transition: .3s ease;
   transition: .3s ease;
 }
@@ -82,7 +85,7 @@
 }
 
 .navbar .nav-items li a:hover {
-  color: #64ffda;
+  color: var(--primary-2);
 }
 
 .navbar .aside-nav {
@@ -94,9 +97,9 @@
   top: 0;
   height: 100vh;
   width: 75vw;
-  background-color: #112240;
-  -webkit-box-shadow: -10px 0px 30px -15px rgba(2, 12, 27, 0.7);
-          box-shadow: -10px 0px 30px -15px rgba(2, 12, 27, 0.7);
+  background-color: var(--bg-primary-2);
+  -webkit-box-shadow: -10px 0px 30px -15px var(--bg-primary-1-shadow);
+          box-shadow: -10px 0px 30px -15px var(--bg-primary-1-shadow);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -119,8 +122,8 @@
 }
 
 .navbar .aside-nav ul li a {
-  font-family: 'SF Mono';
-  color: #64ffda;
+  font-family: var(--sf-mono);
+  color: var(--primary-2);
   display: block;
   text-align: center;
   padding: 25px 0;
@@ -138,7 +141,7 @@
           transform: translateX(-50%);
   bottom: 0px;
   height: 2px;
-  background-color: #64ffda;
+  background-color: var(--primary-2);
   -webkit-transition: .3s ease;
   transition: .3s ease;
 }
@@ -154,7 +157,7 @@
   .navbar .nav-logo {
     max-height: 70px;
     width: auto;
-    padding: 20px 30px;
+    padding: 15px 30px;
   }
   .navbar .nav-items {
     display: -webkit-box;
@@ -168,7 +171,7 @@
 
 @media screen and (min-width: 900px) {
   .navbar .nav-logo {
-    padding: 20px 40px;
+    padding: 15px 40px;
   }
   .navbar .nav-items {
     margin-right: 40px;
