--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,3 @@
-@import './../../styles/variables';
-
 @mixin nav-hover-animation($width) {
     &::after {
         content: '';
@@ -9,7 +7,7 @@
         transform: translateX(-50%);
         bottom: 0px;
         height: 2px;
-        background-color: $cyan;
+        background-color: var(--primary-2);
         transition: .3s ease;
     }
     &:hover::after {
@@ -18,8 +16,7 @@
 }
 
 .navbar {
-    background: rgba(10, 25, 47, 0.9);
-    box-shadow: 0 10px 30px -10px $navy-shadow;
+    background: var(--bg-primary-1-transparent);
     display: flex;
     justify-content: space-between;
     height: 60px;
@@ -30,12 +27,16 @@
     backdrop-filter: blur(6px);
     z-index: 2;
 
+    &.box-shadow {
+        box-shadow: 0 10px 30px -10px var(--bg-primary-1-shadow);
+    }
+
     .nav-link {
         display: inline-block;
     }
     .nav-logo {
         max-height: 60px;
-        padding: 15px 25px;
+        padding: 10px 25px;
     }
 
     .menu-icon button {
@@ -44,7 +45,7 @@
         border: none;
         height: 60px;
         font-size: 1.7em;
-        color: $cyan;
+        color: var(--primary-2);
         padding: 10px 20px;
         width: 60px;
         z-index: 99;
@@ -62,16 +63,16 @@
                 height: 100%;
                 display: flex;
                 align-items: center;
-                color: $white;
+                color: white;
                 position: relative;
                 transition: .3s ease;
-                font-family: 'SF Mono';
+                font-family: var(--sf-mono);
                 font-size: .9em;
 
                 @include nav-hover-animation(100%);
 
                 &:hover {
-                    color: $cyan;
+                    color: var(--primary-2);
                 }
             }
         }
@@ -84,8 +85,8 @@
         top: 0;
         height: 100vh;
         width: 75vw;
-        background-color: $light-navy;
-        box-shadow: -10px 0px 30px -15px $navy-shadow;
+        background-color: var(--bg-primary-2);
+        box-shadow: -10px 0px 30px -15px var(--bg-primary-1-shadow);
         align-items: center;
         transition: .4s ease;
         visibility: hidden;
@@ -101,8 +102,8 @@
             width: 100%;
 
             li a {
-                font-family: 'SF Mono';
-                color: $cyan;
+                font-family: var(--sf-mono);
+                color: var(--primary-2);
                 display: block;
                 text-align: center;
                 padding: 25px 0;
@@ -123,7 +124,7 @@
         .nav-logo {
             max-height: 70px;
             width: auto;
-            padding: 20px 30px;
+            padding: 15px 30px;
         }
 
         .nav-items {
@@ -139,7 +140,7 @@
 @media screen and (min-width: 900px) {
     .navbar {
         .nav-logo {
-            padding: 20px 40px;
+            padding: 15px 40px;
         }
 
         .nav-items {
