--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
+:root {
+  --sf-pro-regular: 'SF Pro Regular';
+  --sf-pro-bold: 'SF Pro Bold';
+  --sf-mono: 'SF Mono';
+  --sf-mono-bold: 'SF Mono Bold';
+}
+
+body.dark {
+  --primary-1: #a4161a;
+  --primary-2: #e5383b;
+  --bg-primary-1: #161a1d;
+  --bg-primary-1-shadow: rgba(2,12,27,0.7);
+  --bg-primary-1-transparent: rgba(22, 26, 29, 0.8);
+  --bg-primary-2: #1c191a;
+  --bg-secondary-1: #f3f3f3;
+  --f-primary-1: #e6f1ff;
+  --f-primary-2: #8892b0;
+}
+
+body.light {
+  --bg-primary-1: #ffffff;
+  --f-primary-1: #2e3033;
+  --bg-primary-1-shadow: rgba(175, 175, 175, 0.7);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +30,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #0a192f;
+  background-color: var(--bg-primary-1);
 }
 
 code {
