--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,1 +1,122 @@
-/* No CSS *//*# sourceMappingURL=About.css.map */
+.section-about-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-about-content .section-image {
+  border-radius: 5px;
+  position: relative;
+  width: 60%;
+  margin-bottom: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section-about-content .section-image::before {
+  border-radius: 5px;
+  position: absolute;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 4%;
+  left: 4%;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  border: 2px solid var(--primary-2);
+  z-index: -9;
+}
+
+.section-about-content .section-image img {
+  display: inline-block;
+  border-radius: 5px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+}
+
+.section-about-content .section-image::after {
+  border-radius: 5px;
+  position: absolute;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  background-color: rgba(229, 56, 59, 0.7);
+}
+
+.section-about-content .section-image:hover::after {
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.section-about-content .section-image:hover::before {
+  top: 8%;
+  left: 8%;
+}
+
+.section-about-content .section-description p {
+  font-size: 1.05em;
+  font-family: var(--sf-pro-regular);
+  color: var(--f-primary-2);
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.section-about-content .section-description p .text-name {
+  font-weight: bold;
+  color: var(--f-primary-1);
+}
+
+.section-about-content .section-description p a {
+  color: var(--primary-2);
+}
+
+.section-about-content .section-description p a:hover {
+  color: var(--primary-3);
+}
+
+@media screen and (min-width: 768px) {
+  .section-about-content {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .section-about-content .section-image {
+    min-width: 200px;
+    margin-right: 50px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .section-about-content {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .section-about-content .section-image {
+    min-width: 250px;
+    margin-right: 70px;
+  }
+  .section-about-content .section-description p {
+    font-size: 1.15em;
+  }
+}
+/*# sourceMappingURL=About.css.map */
