--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,33 @@
   --sf-mono-bold: 'SF Mono Bold';
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #797979;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #646464;
+}
+
 body.dark {
   --primary-1: #a4161a;
-  --primary-2: #e5383b;
-  --bg-primary-1: #161a1d;
+  --primary-2: rgb(229, 56, 59);
+  --primary-3: rgb(255, 83, 85);
+  --bg-primary-1: rgb(22, 26, 29);
   --bg-primary-1-shadow: rgba(2,12,27,0.7);
   --bg-primary-1-transparent: rgba(22, 26, 29, 0.8);
   --bg-primary-2: #1c191a;
