--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ main {
 
 section {
   display: inline-block;
-  margin: 75px 20px;
+  margin: 75px 0;
   max-width: 900px;
 }
 
@@ -127,6 +127,12 @@ section .section-title::after {
 
 .text-white {
   color: var(--f-primary-1);
+}
+
+@media screen and (min-width: 480px) {
+  section {
+    margin: 75px 20px;
+  }
 }
 
 @media screen and (min-width: 768px) {
