--- a/src/App.scss
+++ b/src/App.scss
@@ -71,7 +71,7 @@ main {
 
 section {
     display: inline-block;
-    margin: 75px 20px;
+    margin: 75px 0;
     max-width: 900px;
 
     .section-title {
@@ -102,6 +102,12 @@ section {
 
 .text-white {
     color: var(--f-primary-1);
+}
+
+@media screen and (min-width: 480px) {
+    section {
+        margin: 75px 20px;
+    }
 }
 
 @media screen and (min-width: 768px) {
