--- a/src/App.scss
+++ b/src/App.scss
@@ -73,6 +73,7 @@ section {
     display: inline-block;
     margin: 75px 0;
     max-width: 900px;
+    width: 100%;
 
     .section-title {
         color: var(--f-primary-1);
