--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -1,3 +1,128 @@
-.section-education {
-    // width: 100%;
+.section-content-education {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+
+    h3 {
+        letter-spacing: 1px;
+        margin-top: 20px;
+        color: var(--primary-2);
+    }
+
+    p {
+        margin-top: 10px;
+        color: var(--f-primary-3);
+    }
+}
+
+.section-description {
+    color: var(--f-primary-2);
+    font-family: var(--sf-pro-regular);
+    font-size: 1em;
+    line-height: 1.5;
+}
+
+.section-description-list {
+    list-style-type: none;
+
+    li {
+        display: flex;
+        align-items: center;
+
+        i {
+            margin-right: 10px;
+            color: var(--primary-2);
+        }
+    }
+}
+
+.education-content {
+    display: none;
+
+    &.active {
+        display: block;
+    }
+}
+
+.education-navigator {
+    display: flex;
+    width: 100%;
+
+    .education-tab {
+        cursor: pointer;
+        border: none;
+        font-family: var(--sf-mono);
+        flex: 1;
+        padding: 10px;
+        background-color: transparent;
+        color: var(--f-primary-3);
+        position: relative;
+        transition: .15s ease-in-out;
+
+        &:hover {
+            background-color: rgb(49, 39, 42);
+            color: var(--primary-3);
+
+            &::after {
+                background-color: var(--primary-3);
+            }
+        }
+
+        &::after {
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            width: 100%;
+            display: block;
+            content: '';
+            height: 2px;
+            background-color: var(--f-primary-3);
+            transition: .15s ease-in-out;
+        }
+
+        &.active {
+            background-color: rgb(49, 39, 42);
+            color: var(--primary-3);
+
+            &::after {
+                background-color: var(--primary-3);
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .section-content-education {
+        flex-direction: row;
+    }
+
+    .education-content {
+        width: 100%;
+    }
+
+    .education-navigator {
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 150px;
+        flex-flow: column;
+
+        .education-tab {
+            margin-top: 2px;
+            flex: none;
+
+            &::after {
+                top: 0;
+                left: -2px;
+                height: 100%;
+                width: 2px;
+            }
+        }
+    }
 }
