--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body.dark {
   --bg-secondary-1: #f3f3f3;
   --f-primary-1: #e6f1ff;
   --f-primary-2: #8892b0;
+  --f-primary-3: #697188;
 }
 
 body.light {
