--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ body.dark {
   --f-primary-1: #e6f1ff;
   --f-primary-2: #8892b0;
   --f-primary-3: #697188;
+  --f-primary-4: #444857;
 }
 
 body.light {
