--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ main {
 
 section {
   display: inline-block;
-  margin: 75px 0;
+  padding: 75px 0;
   max-width: 900px;
   width: 100%;
 }
@@ -132,14 +132,15 @@ section .section-title::after {
 
 @media screen and (min-width: 480px) {
   section {
-    margin: 75px 20px;
+    padding: 75px 20px;
   }
 }
 
 @media screen and (min-width: 768px) {
   section {
     display: block;
-    margin: 75px auto;
+    padding: 75px auto;
+    margin: 0 auto;
     width: 80%;
   }
   section .section-title {
