--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,4 +1,4 @@
-.section-content-education {
+.section-content-experience {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6,7 +6,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  overflow-x: hidden;
 }
 
 .section-image {
@@ -62,60 +61,69 @@
   color: var(--primary-2);
 }
 
-.education-content-container {
-  position: relative;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
+.experience-content {
+  display: none;
 }
 
-.education-content-container .education-content {
-  width: 100%;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 100%;
-          flex: 0 0 100%;
-  position: relative;
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
+.experience-content.active {
+  display: block;
 }
 
-.education-navigator {
+.experience-navigator {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
   width: 100%;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  /* Handle */
 }
 
-.education-navigator .education-tab {
+.experience-navigator::-webkit-scrollbar {
+  height: 4px;
+}
+
+.experience-navigator::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+  border-radius: 5px;
+}
+
+.experience-navigator::-webkit-scrollbar-thumb {
+  background: var(--f-primary-4);
+  border-radius: 10px;
+}
+
+.experience-navigator .experience-tab {
+  height: 100%;
+  overflow-y: visible;
+  outline: none;
   cursor: pointer;
   border: none;
   font-family: var(--sf-mono);
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
   padding: 10px;
   background-color: transparent;
+  white-space: nowrap;
   color: var(--f-primary-3);
   position: relative;
-  outline: none;
   -webkit-transition: .15s ease-in-out;
   transition: .15s ease-in-out;
 }
 
-.education-navigator .education-tab:hover {
+.experience-navigator .experience-tab:hover {
   background-color: #31272a;
   color: var(--primary-3);
 }
 
-.education-navigator .education-tab:hover::after {
+.experience-navigator .experience-tab:hover::after {
   background-color: var(--primary-3);
 }
 
-.education-navigator .education-tab::after {
+.experience-navigator .experience-tab::after {
   position: absolute;
   bottom: -2px;
   left: 0;
@@ -128,26 +136,26 @@
   transition: .15s ease-in-out;
 }
 
-.education-navigator .education-tab.active {
+.experience-navigator .experience-tab.active {
   background-color: #31272a;
   color: var(--primary-3);
 }
 
-.education-navigator .education-tab.active::after {
+.experience-navigator .experience-tab.active::after {
   background-color: var(--primary-3);
 }
 
 @media screen and (min-width: 768px) {
-  .section-content-education {
+  .section-content-experience {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
   }
-  .education-content {
+  .experience-content {
     width: 100%;
   }
-  .education-navigator {
+  .experience-navigator {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -159,17 +167,17 @@
     -ms-flex-flow: column;
         flex-flow: column;
   }
-  .education-navigator .education-tab {
+  .experience-navigator .experience-tab {
     margin-top: 2px;
     -webkit-box-flex: 0;
         -ms-flex: none;
             flex: none;
   }
-  .education-navigator .education-tab::after {
+  .experience-navigator .experience-tab::after {
     top: 0;
     left: -2px;
     height: 100%;
     width: 2px;
   }
 }
-/*# sourceMappingURL=Education.css.map */
+/*# sourceMappingURL=Experience.css.map */
