--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,10 @@ section .section-title::after {
   color: var(--f-primary-1);
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 @media screen and (min-width: 480px) {
   section {
     padding: 75px 20px;
