--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -1,7 +1,6 @@
 .section-content-education {
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
 }
 
 .section-image {
@@ -73,6 +72,7 @@
         position: relative;
         outline: none;
         transition: .15s ease-in-out;
+        white-space: nowrap;
 
         &:hover {
             background-color: rgb(49, 39, 42);
