fix: education & experience

--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -34,6 +34,7 @@
 .section-image p {
   margin-top: 10px;
   color: var(--f-primary-3);
+  font-family: var(--sf-mono);
 }
 
 .section-description {
@@ -80,6 +81,7 @@
   position: relative;
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
+  padding: 0 30px;
 }
 
 .education-navigator {
@@ -155,9 +157,11 @@
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    width: 150px;
     -ms-flex-flow: column;
         flex-flow: column;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 140px;
+            flex: 0 0 140px;
   }
   .education-navigator .education-tab {
     margin-top: 2px;
