--- a/src/components/Education/Education.scss
+++ b/src/components/Education/Education.scss
@@ -19,6 +19,7 @@
     p {
         margin-top: 10px;
         color: var(--f-primary-3);
+        font-family: var(--sf-mono);
     }
 }
 
@@ -54,6 +55,7 @@
         flex: 0 0 100%;
         position: relative;
         transition: .5s ease-in-out;
+        padding: 0 30px;
     }
 }
 
@@ -118,8 +120,8 @@
     .education-navigator {
         flex-direction: column;
         justify-content: flex-start;
-        width: 150px;
         flex-flow: column;
+        flex: 0 0 140px;
 
         .education-tab {
             margin-top: 2px;
