--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@ body.dark {
   --f-primary-2: #8892b0;
   --f-primary-3: #697188;
   --f-primary-4: #444857;
+  --f-primary-5: #a1acce;
 }
 
 body.light {
