--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,1 +1,182 @@
-/* No CSS *//*# sourceMappingURL=Project.css.map */
+.section-project-item {
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  gap: 10px;
+  -ms-grid-columns: (1fr)[12];
+      grid-template-columns: repeat(12, 1fr);
+  grid-template: "container";
+  place-items: center;
+  place-content: center;
+  overflow: hidden;
+  margin: 30px 0;
+}
+
+.section-project-item .project-content {
+  padding: 20px;
+  grid-column: 1 / -1;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-area: container;
+  z-index: 2;
+  background-color: rgba(15, 1, 1, 0.8);
+}
+
+.section-project-item .project-content .project-overline {
+  color: var(--primary-3);
+  font-family: var(--sf-mono);
+  font-weight: bold;
+}
+
+.section-project-item .project-content .project-title {
+  color: var(--f-primary-1);
+  font-size: 1.7em;
+  margin-top: 5px;
+}
+
+.section-project-item .project-content .project-description {
+  color: var(--f-primary-5);
+  font-family: var(--sf-pro-regular);
+  line-height: 1.5;
+  margin-top: 10px;
+  padding: 20px 0;
+}
+
+.section-project-item .project-content .project-links {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.section-project-item .project-content .project-links .project-tech {
+  list-style-type: none;
+}
+
+.section-project-item .project-content .project-links .project-tech li {
+  display: inline-block;
+  color: var(--f-primary-5);
+  font-family: var(--sf-mono);
+  font-size: .95em;
+  margin-right: 20px;
+}
+
+.section-project-item .project-content .project-links a {
+  color: var(--f-primary-1);
+  font-size: 2em;
+  -webkit-transition: .1s ease-in-out;
+  transition: .1s ease-in-out;
+}
+
+.section-project-item .project-content .project-links a:hover {
+  color: var(--primary-3);
+}
+
+.section-project-item .project-image {
+  grid-column: 1 / -1;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  grid-area: container;
+}
+
+.section-project-item .project-image picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .section-project-item:not(:first-child) {
+    margin-top: 50px;
+  }
+  .section-project-item:nth-child(even) .project-content {
+    grid-area: 1 / -8 / -2 / 5;
+  }
+  .section-project-item:nth-child(even) .project-content .project-overline {
+    text-align: left;
+  }
+  .section-project-item:nth-child(even) .project-content .project-title {
+    text-align: left;
+  }
+  .section-project-item:nth-child(even) .project-content .project-description {
+    text-align: left;
+  }
+  .section-project-item:nth-child(even) .project-content .project-links {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .section-project-item:nth-child(even) .project-image {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
+    grid-area: 1 / 1 / -2 / 8;
+  }
+  .section-project-item .project-content {
+    padding: 0;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
+    grid-area: 1 / 1 / -2 / 8;
+    background-color: transparent;
+  }
+  .section-project-item .project-content .project-description {
+    background-color: #21272c;
+    padding: 20px;
+    margin-top: 20px;
+    text-align: right;
+    border-radius: 8px;
+    -webkit-box-shadow: 0 10px 30px -10px rgba(15, 1, 1, 0.8);
+            box-shadow: 0 10px 30px -10px rgba(15, 1, 1, 0.8);
+  }
+  .section-project-item .project-content .project-overline {
+    text-align: right;
+  }
+  .section-project-item .project-content .project-title {
+    text-align: right;
+    font-size: 1.8em;
+  }
+  .section-project-item .project-content .project-links {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .section-project-item .project-image {
+    grid-area: 1 / -8 / -2 / 5;
+  }
+  .section-project-item .project-image picture img {
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .section-project-item .project-content {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 7;
+    grid-area: 1 / 1 / -2 / 8;
+  }
+  .section-project-item .project-image {
+    grid-area: 1 / -8 / -2 / 2;
+  }
+  .section-project-item .project-image picture img {
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+}
+/*# sourceMappingURL=Project.css.map */
