--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,10 @@ section .section-title::after {
   overflow: hidden;
 }
 
+.mx-auto {
+  margin: 0 auto;
+}
+
 @media screen and (min-width: 480px) {
   section {
     padding: 75px 20px;
