--- a/src/App.scss
+++ b/src/App.scss
@@ -109,6 +109,10 @@ section {
     overflow: hidden;
 }
 
+.mx-auto {
+    margin: 0 auto;
+}
+
 @media screen and (min-width: 480px) {
     section {
         padding: 75px 20px;
