--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,19 @@ body.dark {
 }
 
 body.light {
+  --primary-1: #a4161a;
+  --primary-2: rgb(229, 56, 59);
+  --primary-3: rgb(255, 83, 85);
   --bg-primary-1: #ffffff;
-  --f-primary-1: #2e3033;
   --bg-primary-1-shadow: rgba(175, 175, 175, 0.7);
+  --bg-primary-1-transparent: rgba(228, 228, 228, 0.8);
+  --bg-primary-2: #1c191a;
+  --bg-secondary-1: #f3f3f3;
+  --f-primary-1: #1d1d1d;
+  --f-primary-2: #8892b0;
+  --f-primary-3: #697188;
+  --f-primary-4: #444857;
+  --f-primary-5: #a1acce;
 }
 
 body {
