--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,6 +1,6 @@
 @mixin nav-hover-animation($width) {
     &::after {
-        content: '';
+        content: "";
         position: absolute;
         width: 0;
         left: 50%;
@@ -8,7 +8,7 @@
         bottom: 0px;
         height: 2px;
         background-color: var(--primary-2);
-        transition: .3s ease;
+        transition: 0.3s ease;
     }
     &:hover::after {
         width: $width;
@@ -70,11 +70,11 @@
                 height: 100%;
                 display: flex;
                 align-items: center;
-                color: white;
+                color: var(--f-primary-1);
                 position: relative;
-                transition: .3s ease;
+                transition: 0.3s ease;
                 font-family: var(--sf-mono);
-                font-size: .9em;
+                font-size: 0.9em;
 
                 @include nav-hover-animation(100%);
 
@@ -95,7 +95,7 @@
         background-color: var(--bg-primary-2);
         box-shadow: -10px 0px 30px -15px var(--bg-primary-1-shadow);
         align-items: center;
-        transition: .4s ease;
+        transition: 0.4s ease;
         visibility: hidden;
         transform: translateX(100%);
 
@@ -108,25 +108,92 @@
             list-style-type: none;
             width: 100%;
 
-            li button {
-                width: 100%;
-                font-family: var(--sf-mono);
-                color: var(--primary-2);
-                display: block;
+            li {
                 text-align: center;
-                padding: 25px 0;
-                position: relative;
-                transition: .3s ease;
-                background-color: transparent;
-                border: none;
-                cursor: pointer;
+                button {
+                    width: 100%;
+                    font-family: var(--sf-mono);
+                    color: var(--primary-2);
+                    display: block;
+                    text-align: center;
+                    padding: 25px 0;
+                    position: relative;
+                    transition: 0.3s ease;
+                    background-color: transparent;
+                    border: none;
+                    cursor: pointer;
 
-                @include nav-hover-animation(50%);
+                    @include nav-hover-animation(50%);
+                }
             }
+
         }
     }
 }
 
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    margin: 20px 0;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+input:checked + .slider {
+    background-color: var(--primary-3);
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px var(--primary-3);
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
 
 @media screen and (min-width: 768px) {
     .navbar {
@@ -146,6 +213,10 @@
             display: none;
         }
     }
+
+    .switch {
+        margin: 20px 10px;
+    }
 }
 
 @media screen and (min-width: 900px) {
@@ -158,12 +229,11 @@
             margin-right: 40px;
 
             li a {
-                font-size: .95em;
+                font-size: 0.95em;
             }
         }
     }
 }
-
 
 @media screen and (min-width: 1200px) {
     .navbar {
