--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -19,7 +19,7 @@
     align-items: center;
     grid-area: container;
     z-index: 2;
-    background-color: rgba(15, 1, 1, 0.8);
+    background-color: var(--bg-primary-4-shadow);
 
     .project-overline {
       color: var(--primary-3);
@@ -124,12 +124,12 @@
       background-color: transparent;
 
       .project-description {
-        background-color: rgb(33, 39, 44);
+        background-color: var(--bg-primary-4);
         padding: 20px;
         margin-top: 20px;
         text-align: right;
         border-radius: 8px;
-        box-shadow: 0 10px 30px -10px rgba(15, 1, 1, 0.8);
+        box-shadow: 0 10px 30px -10px var(--bg-primary-4-shadow);
       }
 
       .project-overline {
