--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -102,7 +102,7 @@
     transition: 0.15s ease-in-out;
 
     &:hover {
-      background-color: rgb(49, 39, 42);
+      background-color: var(--bg-primary-3);
       color: var(--primary-3);
 
       &::after {
@@ -123,7 +123,7 @@
     }
 
     &.active {
-      background-color: rgb(49, 39, 42);
+      background-color: var(--bg-primary-3);
       color: var(--primary-3);
 
       &::after {
