--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,9 @@ body.dark {
   --bg-primary-1-shadow: rgba(2,12,27,0.7);
   --bg-primary-1-transparent: rgba(22, 26, 29, 0.8);
   --bg-primary-2: #1c191a;
+  --bg-primary-3: #31272a;
+  --bg-primary-4: rgb(33, 39, 44);
+  --bg-primary-4-shadow: rgba(15, 1, 1, 0.8);
   --bg-secondary-1: #f3f3f3;
   --f-primary-1: #e6f1ff;
   --f-primary-2: #8892b0;
@@ -49,14 +52,33 @@ body.light {
   --primary-3: rgb(255, 83, 85);
   --bg-primary-1: #ffffff;
   --bg-primary-1-shadow: rgba(175, 175, 175, 0.7);
-  --bg-primary-1-transparent: rgba(228, 228, 228, 0.8);
-  --bg-primary-2: #1c191a;
+  --bg-primary-1-transparent: rgba(255, 255, 255, 0.8);
+  --bg-primary-2: #e6c7c7;
+  --bg-primary-3: rgb(226, 226, 226);
+  --bg-primary-4: rgb(255, 244, 244);
+  --bg-primary-4-shadow: rgba(224, 224, 224, 0.9);
   --bg-secondary-1: #f3f3f3;
   --f-primary-1: #1d1d1d;
-  --f-primary-2: #8892b0;
-  --f-primary-3: #697188;
+  --f-primary-2: #62687c;
+  --f-primary-3: #505669;
   --f-primary-4: #444857;
-  --f-primary-5: #a1acce;
+  --f-primary-5: #484d5a;
+}
+
+
+/* Track */
+body.light::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(133, 133, 133, 0.6);
+}
+
+/* Handle */
+body.light::-webkit-scrollbar-thumb {
+  background: #b4b4b4;
+}
+
+/* Handle on hover */
+body.light::-webkit-scrollbar-thumb:hover {
+  background: #646464;
 }
 
 body {
